# substrate-contracts-node

./: .editorconfig  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  Dockerfile.build  README.md  shell.nix  zombienet.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  updateContentCommand.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codespaces-prebuild.yml
contracts/flipper/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
node/src/chain_spec/: dev.rs
node/src/service/: dev.rs
pallets/contract-caller/: Cargo.toml
pallets/contract-caller/contracts/flipper/: Cargo.toml  e2e_tests.rs  lib.rs
pallets/contract-caller/contracts/flipper/traits/: Cargo.toml
pallets/contract-caller/contracts/traits/: Cargo.toml  lib.rs
pallets/contract-caller/src/: benchmarking.rs  lib.rs
pallets/template/: Cargo.toml
pallets/verifier/: Cargo.toml
pallets/verifier/src/: lib.rs
parachain-runtime/: Cargo.toml
parachain-runtime/src/: assets_config.rs  contracts_config.rs  lib.rs  revive_config.rs  xcm_config.rs
primitives/: Cargo.toml
primitives/src/: hasher.rs  lib.rs  runtime.rs  utils.rs  verifier.rs
primitives/src/field_ops/: arkworks.rs
primitives/src/hashing/: arkworks.rs  ethereum.rs  mod.rs
primitives/src/signing/: ecdsa.rs  mod.rs
primitives/src/traits/: anchor.rs  linkable_tree.rs  merkle_tree.rs  mixer.rs  mod.rs  vanchor.rs
primitives/src/types/: mod.rs  vanchor.rs
primitives/src/verifying/: arkworks.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: assets_config.rs  chain_extension.rs  contracts_config.rs  lib.rs  revive_config.rs
