[workspace.package]
authors = ["anonymous"]
edition = "2021"
version = "0.39.0"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"

[workspace]
resolver = "2"
members = [
	"node",
	"runtime",
	"parachain-runtime",
]
exclude = [
	"contracts",
]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
futures = "0.3.30"
hex-literal = { version = "0.4.1"}
jsonrpsee = { version = "0.22", features = ["server"] }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
smallvec = "1.11.2"
color-print = "0.3.5"
wasmtime="8.0.1"

# Substrate
frame-benchmarking = { version = "30.0.0", default-features = false }
frame-benchmarking-cli = { version = "34.0.0" }
frame-executive = { version = "30.0.0", default-features = false }
frame-support = { version = "30.0.0", default-features = false }
frame-system = { version = "30.0.0", default-features = false }
frame-system-benchmarking = { version = "30.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "28.0.0", default-features = false }
frame-try-runtime = { version = "0.36.0", default-features = false }
pallet-aura = { version = "29.0.0", default-features = false }
pallet-authorship = { version = "30.0.0", default-features = false }
pallet-balances = { version = "30.0.0", default-features = false }
pallet-session = { version = "30.0.0", default-features = false }
pallet-sudo = { version = "30.0.0", default-features = false }
pallet-timestamp = { version = "29.0.0", default-features = false }
pallet-transaction-payment = { version = "30.0.0", default-features = false }
pallet-message-queue = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "32.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "30.0.0", default-features = false }
sc-basic-authorship = { version = "0.36.0" }
sc-chain-spec = { version = "29.0.0" }
sc-cli = { version = "0.38.0" }
sc-client-api = { version = "30.0.0" }
sc-consensus = { version = "0.35.0" }
sc-executor = { version = "0.34.0" }
sc-network = { version = "0.36.0" }
sc-network-sync = { version = "0.35.0" }
sc-offchain = { version = "31.0.0" }
sc-rpc = { version = "31.0.0" }
sc-service = { version = "0.37.0" }
sc-sysinfo = { version = "29.0.0" }
sc-telemetry = { version = "17.0.0" }
sc-tracing = { version = "30.0.0" }
sc-transaction-pool = { version = "30.0.0" }
sc-transaction-pool-api = { version = "30.0.0" }
sp-api = { version = "28.0.0", default-features = false }
sp-keyring = { version = "33.0.0", default-features = false }
sp-block-builder = { version = "28.0.0", default-features = false }
sp-blockchain = { version = "30.0.0" }
sp-consensus-aura = { version = "0.34.0", default-features = false }
sp-core = { version = "30.0.0", default-features = false }
sp-inherents = { version = "28.0.0", default-features = false }
sp-io = { version = "32.0.0", default-features = false }
sp-keystore = { version = "0.36.0" }
sp-offchain = { version = "28.0.0", default-features = false }
sp-runtime = { version = "33.0.0", default-features = false }
sp-session = { version = "29.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-timestamp = { version = "28.0.0" }
sp-transaction-pool = { version = "28.0.0", default-features = false }
sp-version = { version = "31.0.0", default-features = false }
substrate-frame-rpc-system = { version = "30.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }
substrate-wasm-builder = { version = "19.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
try-runtime-cli = { version = "0.40.0" }

# extra deps for running a solo node on top of a parachain
pallet-grandpa = { version = "30.0.0", default-features = false }
sc-consensus-grandpa = { version = "0.21.0", default-features = false }
sp-consensus-grandpa = { version = "15.0.0", default-features = false }
sp-genesis-builder = { version = "0.9.0", default-features = false }
sp-storage = { version = "20.0.0", default-features = false }
sc-consensus-aura = { version = "0.36.0", default-features = false }
sc-consensus-manual-seal = { version = "0.37.0", default-features = false }

# extra deps for setting up pallet-contracts
pallet-contracts = { version = "29.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "18.0.0", default-features = false }
pallet-assets = { version = "31.0.0", default-features = false }
pallet-utility = { version = "30.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "9.0.0", default-features = false }
polkadot-cli = { version = "9.0.0", features = ["rococo-native"] }
polkadot-parachain-primitives = { version = "8.0.0", default-features = false }
polkadot-primitives = { version = "9.0.0" }
polkadot-runtime-common = { version = "9.0.0", default-features = false }
xcm = { version = "9.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "9.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "9.0.0", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.9.0" }
cumulus-client-collator = { version = "0.9.0" }
cumulus-client-consensus-proposer = { version = "0.9.0" }
cumulus-client-consensus-aura = { version = "0.9.0" }
cumulus-client-consensus-common = { version = "0.9.0" }
cumulus-client-service = { version = "0.9.0" }
cumulus-pallet-aura-ext = { version = "0.9.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.9.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.9.0", default-features = false, features = ["parameterized-consensus-hook",] }
cumulus-pallet-session-benchmarking = { version = "11.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.9.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.9.0", default-features = false }
cumulus-primitives-core = { version = "0.9.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.9.0" }
cumulus-primitives-timestamp = { version = "0.9.0", default-features = false }
cumulus-primitives-utility = { version = "0.9.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.9.0" }
pallet-collator-selection = { version = "11.0.0", default-features = false }
parachain-info = { version = "0.9.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "9.0.0", default-features = false }

