[workspace.package]
authors = ["anonymous"]
edition = "2021"
version = "0.39.0"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"

[workspace]
resolver = "2"
members = [
	"node",
	"runtime",
	"parachain-runtime",
]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
futures = "0.3.30"
hex-literal = { version = "0.4.1"}
jsonrpsee = { version = "0.22", features = ["server"] }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
smallvec = "1.11.2"
color-print = "0.3.5"
wasmtime="8.0.1"

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }

# extra deps for running a solo node on top of a parachain
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false}

# extra deps for setting up pallet-contracts
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
polkadot-cli =  { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", features = ["rococo-native"] }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
xcm = { package="staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
xcm-builder = { package="staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
xcm-executor = { package="staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false, features = ["parameterized-consensus-hook",] }
cumulus-pallet-session-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }
parachains-common = {  git = "https://github.com/paritytech/polkadot-sdk", rev = "59f868d1e9502cb4e434127cac6e439d01d7dd2b", default-features = false }

