[package]
name = "contracts-node"
version = "0.33.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node configured for smart contracts via `pallet-contracts`."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "substrate-contracts-node"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = { version = "0.3.28", features = ["thread-pool"]}

sc-cli = { version = "0.32.0", package = "sc-cli", default-features = false }
sp-core = { version = "24.0.0", package = "sp-core" }
sc-executor = { version = "0.28.0", package = "sc-executor" }
sc-network = { version = "0.30.0", package = "sc-network" }
sc-service = { version = "0.31.0", package = "sc-service", default-features = false }
sc-telemetry = { version = "11.0.0", package = "sc-telemetry" }
sc-keystore = { version = "21.0.0", package = "sc-keystore" }
sc-transaction-pool = { version = "24.0.0", package = "sc-transaction-pool" }
sc-transaction-pool-api = { version = "24.0.0", package = "sc-transaction-pool-api" }
sc-offchain = { version = "25.0.0", package = "sc-offchain" }
sc-consensus = { version = "0.29.0", package = "sc-consensus" }
sc-consensus-manual-seal = { version = "0.31.0", package = "sc-consensus-manual-seal" }
sc-client-api = { version = "24.0.0", package = "sc-client-api" }
sp-runtime = { version = "27.0.0", package = "sp-runtime" }
sp-timestamp = { version = "22.0.0", package = "sp-timestamp" }

# These dependencies are used for the node's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { version = "22.0.0", package = "sp-api" }
sc-rpc = { version = "25.0.0", package = "sc-rpc" }
sc-rpc-api = { version = "0.29.0", package = "sc-rpc-api" }
sp-blockchain = { version = "24.0.0", package = "sp-blockchain" }
sp-block-builder = { version = "22.0.0", package = "sp-block-builder" }
sc-basic-authorship = { version = "0.30.0", package = "sc-basic-authorship" }
substrate-frame-rpc-system = { version = "24.0.0", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { version = "26.0.0", package = "pallet-transaction-payment-rpc" }

# Local Dependencies
contracts-node-runtime = { path = "../runtime", version = "0.33.0" }

# yank this crate until
# https://github.com/bluejekyll/enum-as-inner/issues/98
# is fixed
enum-as-inner = "=0.6.0"

[build-dependencies]
substrate-build-script-utils = { version = "8.0.0", package = "substrate-build-script-utils" }

[features]
default = []
