[package]
name = "contracts-node"
version.workspace = true
authors.workspace = true
description = "Substrate node configured for smart contracts via `pallet-contracts`."
edition.workspace = true
license.workspace = true
build = "build.rs"
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "substrate-contracts-node"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
log = { workspace = true }
codec = { workspace = true }
serde = { workspace = true }
jsonrpsee = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }

# Local
contracts-parachain-runtime = { path = "../parachain-runtime", features = ["parachain"], version = "0.39.0" }
contracts-node-runtime = { path = "../runtime",  version = "0.39.0" }

# Substrate
frame-benchmarking = { version = "31.0.0", workspace = true }
frame-benchmarking-cli = { version = "35.0.1", workspace = true }
pallet-transaction-payment-rpc = { version = "33.0.0", workspace = true }
sc-basic-authorship = { version = "0.37.0", workspace = true }
sc-chain-spec = { version = "30.0.1", workspace = true }
sc-cli = { version = "0.39.0", workspace = true }
sc-client-api = { version = "31.0.0", workspace = true }
sc-offchain = { version = "32.0.0", workspace = true }
sc-consensus = { version = "0.36.0", workspace = true }
sc-executor = { version = "0.35.0", workspace = true }
sc-network = { version = "0.37.0", workspace = true }
sc-network-sync = { version = "0.36.0", workspace = true }
sp-keyring = { version = "34.0.0", workspace = true }
sc-rpc = { version = "32.0.0", workspace = true }
sc-service = { version = "0.38.0", workspace = true }
sc-sysinfo = { version = "30.0.0", workspace = true }
sc-telemetry = { version = "17.0.0", workspace = true }
sc-tracing = { version = "31.0.0", workspace = true }
sc-transaction-pool = { version = "31.0.0", workspace = true }
sc-transaction-pool-api = { version = "31.0.0", workspace = true }
sp-api = { version = "29.0.0", workspace = true }
sp-block-builder = { version = "29.0.0", workspace = true }
sp-blockchain = { version = "31.0.0", workspace = true }
sp-consensus-aura = { version = "0.35.0", workspace = true }
sp-core = { version = "31.0.0", workspace = true }
sp-keystore = { version = "0.37.0", workspace = true }
sp-io = { version = "33.0.0", workspace = true }
sp-runtime = { version = "34.0.0", workspace = true }
sp-timestamp = { version = "29.0.0", workspace = true }
substrate-frame-rpc-system = { version = "31.0.0", workspace = true }
substrate-prometheus-endpoint = { version = "0.17.0", workspace = true }
try-runtime-cli = { version = "0.41.0", workspace = true, optional = true }

# extra for running solo-chain
sp-consensus-grandpa = { version = "16.0.0", workspace = true }
sc-consensus-grandpa = { version = "0.22.0", workspace = true }
sc-consensus-aura = { version = "0.37.0", workspace = true }
sc-consensus-manual-seal = { version = "0.38.0", workspace = true }

# Polkadot
polkadot-cli = { version = "10.0.0", workspace = true }
polkadot-primitives = { version = "10.0.0", workspace = true }
xcm = { workspace = true }

# Cumulus
cumulus-client-cli = { version = "0.10.0", workspace = true }
cumulus-client-collator = { version = "0.10.0", workspace = true }
cumulus-client-consensus-aura = { version = "0.10.0", workspace = true }
cumulus-client-consensus-common = { version = "0.10.0", workspace = true }
cumulus-client-consensus-proposer = { version = "0.10.0", workspace = true }
cumulus-client-service = { version = "0.10.0", workspace = true }
cumulus-primitives-core = { version = "0.10.0", workspace = true }
cumulus-primitives-parachain-inherent = { version = "0.10.0", workspace = true }
cumulus-relay-chain-interface = { version = "0.10.0", workspace = true }
color-print = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", workspace = true }

[features]
default = []
runtime-benchmarks = [
	"contracts-parachain-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"contracts-parachain-runtime/try-runtime"
]
