[package]
name = "contracts-parachain-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Parachain Runtime configured for smart contracts via `pallet-contracts`."
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
[build-dependencies]
substrate-wasm-builder = { version = "20.0.0", workspace = true, optional = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", optional = true }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
smallvec = "1.11.2"

# Substrate
frame-benchmarking = { version = "31.0.0", workspace = true, optional = true }
frame-executive = { version = "31.0.0", workspace = true }
frame-support = { version = "31.0.0", workspace = true }
frame-system = { version = "31.0.0", workspace = true }
frame-system-benchmarking = { version = "31.0.0", workspace = true, optional = true }
frame-system-rpc-runtime-api = { version = "29.0.0", workspace = true }
frame-try-runtime = { version = "0.37.0", workspace = true, optional = true }
pallet-aura = { version = "30.0.0", workspace = true }
pallet-authorship = { version = "31.0.0", workspace = true }
pallet-balances = { version = "31.0.0", workspace = true }
pallet-session = { version = "31.0.0", workspace = true }
pallet-message-queue = { version = "34.0.0", workspace = true }
pallet-sudo = { version = "31.0.0", workspace = true }
pallet-timestamp = { version = "30.0.0", workspace = true }
pallet-transaction-payment = { version = "31.0.0", workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "31.0.0", workspace = true }
sp-api = { version = "29.0.0", workspace = true }
sp-block-builder = { version = "29.0.0", workspace = true }
sp-consensus-aura = { version = "0.35.0", workspace = true }
sp-core = { version = "31.0.0", workspace = true }
sp-inherents = { version = "29.0.0", workspace = true }
sp-offchain = { version = "29.0.0", workspace = true }
sp-runtime = { version = "34.0.0", workspace = true }
sp-session = { version = "30.0.0", workspace = true }
sp-std = { version = "14.0.0", workspace = true }
sp-transaction-pool = { version = "29.0.0", workspace = true }
sp-version = { version = "32.0.0", workspace = true }
sp-genesis-builder = { version = "0.10.0", workspace = true }

# Polkadot
pallet-xcm = { version = "10.0.1", workspace = true }
polkadot-parachain-primitives = { version = "9.0.0", workspace = true }
polkadot-runtime-common = { version = "10.0.0", workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { version = "0.10.0", workspace = true }
cumulus-pallet-dmp-queue = { version = "0.10.0", workspace = true }
cumulus-pallet-parachain-system = { version = "0.10.0", workspace = true }
cumulus-pallet-session-benchmarking = { version = "12.0.0", workspace = true }
cumulus-pallet-xcm = { version = "0.10.0", workspace = true }
cumulus-pallet-xcmp-queue = { version = "0.10.0", workspace = true }
cumulus-primitives-core = { version = "0.10.0", workspace = true }
cumulus-primitives-timestamp = { version = "0.10.0", workspace = true }
cumulus-primitives-utility = { version = "0.10.0", workspace = true }
pallet-collator-selection = { version = "12.0.0", workspace = true }
parachain-info = { workspace = true }
parachains-common = { version = "10.0.0", workspace = true }

# extra deps for setting up pallet-contracts
pallet-contracts = { version = "30.0.0", workspace = true }
pallet-utility = { version = "31.0.0", workspace = true }
pallet-insecure-randomness-collective-flip = { version = "19.0.0", workspace = true }
pallet-assets = { version = "32.0.0", workspace = true }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"log/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-contracts/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-xcm/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]

experimental = [ "pallet-aura/experimental" ]
parachain = []
